[package]
name = "steam-server-supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4.23"
tonic = "0.8.2"
prost = "0.11.2"

[build-dependencies]
tonic-build = "0.8"
